--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/kotlinc.xml
+/.idea/deploymentTargetDropDown.xml
+/.idea/vcs.xml
+/.idea/misc.xml
+/appImages
 .DS_Store
 /build
 /captures
